--- a/index.html
+++ b/index.html
@@ -26,6 +26,109 @@
                 </div>
             </div>
         </section>
+
+        <section id="weekly">
+            <div class="heading">
+                <p>Opening this week</p>
+            </div>
+            <div class="line"></div>
+            <div class="filters">
+                <p class="filter">All films</p>
+                <p class="filter">2D</p>
+                <p class="filter">3D</p>
+                <p class="filter">Imax</p>
+                <p class="filter">Imax 3d</p>
+            </div>
+
+            <div class="movies">
+                <div class="movie">
+                    <p>Batman <br> <span>120 min | 3D</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>Blade Runner <br> <span>180 min | 2D</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>LOI BAO <br> <span>90 min | IMAX</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>Uncharted <br> <span>120 min | 3D</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>Baby Driver <br> <span>120 min | 3D</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>Wolf of Wall Street <br> <span>120 min | 3D</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>EEAO <br> <span>180 min | IMAX 3D</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>Bullet train <br> <span>120 min | 3D</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>Sinners <br> <span>120 min | IMAX</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>Foundation <br> <span>180 min | 3D</span></p>
+                </div>
+
+            </div>
+        </section>
+
+        <section id="upcoming">
+            <div class="heading">
+                <p>Coming Soon</p>
+            </div>
+            <div class="line"></div>
+
+            <div class="movies">
+                <div class="movie">
+                    <p>Django Unchained <br> <span>120 min | 3D</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>Cargo <br> <span>180 min | 2D</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>The Iron Olow <br> <span>90 min | IMAX</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>Master <br> <span>120 min | 3D</span></p>
+                </div>
+
+                <div class="movie">
+                    <p>Jumanji <br> <span>120 min | 3D</span></p>
+                </div>
+
+
+            </div>
+        </section>
+
+        <footer>
+            <div class="company">
+                <p class="logo"><span>Imagix</span> <br> Cinema</p>
+
+                <div class="social-links">
+                    <a target="_blank" href="https://github.com/SumanrajBera"><i class="ri-github-line"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/sumanraj-bera-2139a9286/"><i class="ri-linkedin-fill"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/sumanrajbera/"><i class="ri-instagram-line"></i></a>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2025 Sumanraj Bera</p>
+            </div>
+        </footer>
     </main>
 </body>
 
